# advent-of-code-2023

./: .gitignore  Cargo.toml  README.md
day-02/: Cargo.toml
day-03/: Cargo.toml  output.txt
day-04/: mix.exs
day-04/lib/: day04.ex
day-04/test/: day04_test.exs
day-05/: Cargo.toml
day-06/: Cargo.toml
day-07/: Cargo.toml
day-08/: Cargo.toml
day-09/: Cargo.toml
day-10/: Cargo.toml
day-11/: Cargo.toml
day-12/: Cargo.toml
day-13/: Cargo.toml
day-14/: Cargo.toml
day-15/: day15_test.go  go.mod  part1.go  part2.go
day-16/: Cargo.toml
day-17/: Cargo.toml
day-18/: Cargo.toml
day-19/: Cargo.toml
day-20/: Cargo.toml
day-21/: Cargo.toml
day-22/: Cargo.toml
day-23/: Cargo.toml
day-24/: Cargo.toml
day-25/: Cargo.toml
day-25/src/: main.rs
