[package]
name = "day-11"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = { version = "0.17.7", features = ["rayon"] }
pathfinding = "4.4.0"
rayon.workspace = true

[dev-dependencies]
indoc.workspace = true
