[package]
name = "day-24"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
z3 = { version = "0.12.1", features = ["static-link-z3"] }

[dev-dependencies]
indoc.workspace = true
